# ChangeLog for sci-mathematics/coq
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/coq/ChangeLog,v 1.27 2008/03/06 17:25:56 tove Exp $

  16 Jan 2008; Alexis Ballier <aballier@gentoo.org> coq-8.1_p3.ebuild:
  restrict also installsources as it has the same problem with ocaml... it
  kills ocamlc -custom executables

  16 Jan 2008; Alexis Ballier <aballier@gentoo.org> coq-8.1_p3.ebuild:
  disable again parallel make... not safe in some rare cases, bug #197389

  03 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  +files/coq-8.1_p3-cmxa-install.dpatch, +files/coq-8.1_p3-noocamlopt.patch,
  files/coqide.desktop, coq-8.1_p3.ebuild:
  Add support for building without ocamlopt, import smimou's patches from
  debian to allow it. Fix desktop entry categories.

  19 Dec 2007; Alexis Ballier <aballier@gentoo.org> coq-8.1_p2.ebuild,
  coq-8.1_p3.ebuild:
  fix depends so that portage doesnt try to downgrade ocaml if you have 3.10
  installed but not camlp5, thanks jakub for the help there

  17 Dec 2007; Alexis Ballier <aballier@gentoo.org> coq-8.0_p3.ebuild,
  coq-8.1_p1.ebuild, coq-8.1_p2.ebuild:
  no need to dodoc the license

*coq-8.1_p3 (17 Dec 2007)

  17 Dec 2007; Alexis Ballier <aballier@gentoo.org> +coq-8.1_p3.ebuild:
  version bump

  20 Oct 2007; Alexis Ballier <aballier@gentoo.org> coq-8.0_p3.ebuild,
  coq-8.1_p1.ebuild:
  quote directory variables

  20 Oct 2007; Alexis Ballier <aballier@gentoo.org> -files/ocaml-3.07.patch,
  -files/coq-8.0-byteflags.patch, -files/coq-8.0-ocaml-3.08.1.patch,
  -coq-8.0-r1.ebuild:
  remove old versions

*coq-8.1_p2 (20 Oct 2007)

  20 Oct 2007; Alexis Ballier <aballier@gentoo.org> +coq-8.1_p2.ebuild:
  version bump, bug #196533, compatible with ocaml 3.10 (needs camlp5 though)

  11 Oct 2007; Alexis Ballier <aballier@gentoo.org> coq-8.1_p1.ebuild:
  fix configure call when ide and norealanalysis useflags are set, bug #195483

*coq-8.1_p1 (29 Sep 2007)
